--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     };
     console.log(getWizardY)
 </script>
+<script src="js/setup.js"></script>        
 <script src="js/stat.js"></script>    
 <script src="js/game.js"></script>
 
